[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/level-select/level-select.gd" type="Script" id=1]
[ext_resource path="res://gui/level-select/LvlOpen.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/font/montserrat_black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gui/level-select/assets/background.png" type="Texture" id=4]
[ext_resource path="res://gui/level-select/assets/home.png" type="Texture" id=5]
[ext_resource path="res://gui/level-select/assets/left.png" type="Texture" id=6]
[ext_resource path="res://gui/level-select/assets/right.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
lvl_open = ExtResource( 2 )
path_scene_title_screen = "res://gui/title-screen/TitleScreen.tscn"

[node name="BlackOverlay" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 960.0
color = Color( 0, 0, 0, 0.313726 )

[node name="WorldLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 30.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 2

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.5
margin_top = -350.5
margin_right = 250.5
margin_bottom = 350.5
texture = ExtResource( 4 )

[node name="GridContainer" type="GridContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = 146.0
margin_right = -34.0
margin_bottom = -28.0
custom_constants/vseparation = 50
custom_constants/hseparation = 35
columns = 3

[node name="HomeButton" type="TextureButton" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -81.0
margin_right = 40.0
texture_normal = ExtResource( 5 )

[node name="PrevButton" type="TextureButton" parent="TextureRect"]
margin_left = -40.0
margin_top = 300.0
margin_bottom = 360.0
texture_normal = ExtResource( 6 )

[node name="NextButton" type="TextureButton" parent="TextureRect"]
margin_left = 480.0
margin_top = 300.0
margin_right = 540.0
margin_bottom = 360.0
texture_normal = ExtResource( 7 )
[connection signal="pressed" from="TextureRect/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="TextureRect/PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="TextureRect/NextButton" to="." method="_on_NextButton_pressed"]
